--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "client",
+  "name": "faansy_client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Maximillian Raphaels for Faansy",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,8 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
